# auth-service

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  draft.py  pyproject.toml  pytest.ini  start.sh  tox.ini
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  use_case.yml
.github/workflows/: build-and-push-on-merge.yml  build-and-push-on-release.yml  build-and-push.yml  build-and-test.yml  build_and_push.yml  github-actions.yml  release.yml
Y_draft/: uow.py
chart/: Chart.yaml  values.yaml
chart/templates/: isp_app_deployment.yaml  isp_deployment.yaml  isp_ingress.yaml  isp_redis_deployment.yaml  isp_redis_service.yaml  isp_service.yaml  secret.yaml
client_example/: client_main.py  crud.py  database.py  errors.py  first_try.py  get_tokens.py  main.py  models.py  oauth2.py  tasks.py  utils.py
client_example/config/: celeryconfig.py  logging.py
client_example/db/: models.py
client_example/httpx_oauth/: errors.py  oauth2.py  openid.py
client_example/middleware/: auth_validation.py
client_example/routers/: auth.py  notes.py
configs/: amazon_settings.toml  development_settings.toml  docker_settings.toml  local_settings.toml  pipeline_settings.toml  test_settings.toml
deploy/: deploy.sh
deploy/helm/: Chart.yaml  override-values.yaml.tmpl  values.yaml
deploy/helm_local/: override-values.yaml.tmpl  values.yaml
deploy/kubectl/: isp_deployment.yaml  isp_ingress.yaml  isp_postgres_deployment.yaml  isp_service.yaml
docs/: conf.py  index.rst  middlewares.rst  repositories.rst  services.rst
envfiles/: .env.development  .env.docker  .env.example  .env.test  settings.json
example_apps/authorization-code-flow/: client.py  db.py
example_apps/authorization-code-pkce-s256-flow/: client.py
example_apps/client_example_old/: tasks.py
example_apps/device-code-flow/: app.py
example_apps/example_client_auth_api_resource/: launch.json  main.py
example_apps/implicit-flow/: client.py  db.py
factories/: commands.py  factory_session.py  purge.py
factories/data/: data_for_factories.py
factories/factory_models/: client_factory.py  code_challenge_factory.py  identity_factory.py  identity_resource_factory.py  persistent_grant_factory.py  resources_related_factory.py  user_factory.py
helm/: Chart.yaml  override-values.yaml.tmpl  values.yaml
helm/templates/: _helpers.tpl  config.yaml  configmap.yaml  deployment.yaml  ingress.yaml  registry-secret.yaml  secret.yaml  service.yaml
helm2/: override-values.yaml.tmpl  values.yaml
helm2/templates/: secret.yaml
kubernetes/: isp_app_deployment.yaml  isp_app_service.yaml  isp_deployment.yaml  isp_ingress.yaml  isp_postgres_deployment.yaml  isp_redis_deployment.yaml  isp_redis_service.yaml
sample_deploy/: override-values.yaml.tmpl  values.yaml
sample_deploy/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
site-content/: index.html
src/: create_rsa_keypair.py  default.toml  dyna_config.py  initial_data.py  log.py  main.py  new_config.py
src/celery/: tasks.py
src/celery_logic/: celery_main.py  token_tasks.py
src/config/: 1.py  __init__.py  config.py  events.py  logging.py  setup.py
src/di/: container.py
src/scripts/: __init__.py  create_3rd_party_providers.py  create_rsa_keys.py  providers_data.py
templates/: test.html
templates_admin_ui/: base.html  identity_provider_with_copy_uri_button.html  layout.html
tests/: conftest.py
tests/api/: fixtures.py
tests/overrides/: override_functions.py  override_test_container.py
tests/performance/: __init__.py  locustfile.py  test_authorization_code_flow.py  test_autorize_endpoint.py  test_client_endpoint.py  test_device_endpoint.py  test_device_flow.py  test_endsession_endpoint.py  test_introspection_endpoint.py  test_third_party_providers.py  test_user.py  test_userinfo_endpoint.py
tests/test_admin_api/: test_admin_group.py  test_admin_role.py  test_admin_user.py
tests/test_api/: test_autorize_endpoint.py  test_client_endpoint.py  test_device_endpoint.py  test_endsession_endpoint.py  test_introspection_endpoint.py  test_revoke_endpoint.py  test_third_party_oidc_endpoint.py  test_token_endpoint.py  test_user.py  test_userinfo.py  test_userinfo_endpoint.py  test_well_known_endpoint.py  test_well_known_openid_config.py
tests/test_e2e/: test_authorization_code_flow.py  test_device_flow.py  test_third_party_github_flow.py  test_third_party_gitlab_and_microsoft_flows.py  test_third_party_gitlab_flow.py  test_third_party_google_flow.py  (+3 more)
(+580 files in other folders)
