[tool.poetry]
name = "identity-server-poc"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.44"}
asyncpg = "^0.27.0"
alembic = "^1.8.1"
httpx = "^0.23.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
sqlalchemy-utils = "^0.38.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
