[tool.poetry]
name = "identity-server-poc"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.95.1"
uvicorn = "^0.20.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.44"}
asyncpg = "^0.27.0"
alembic = "^1.8.1"
httpx = "^0.23.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
sqlalchemy-utils = "^0.38.3"
psycopg2-binary = "^2.9.5"
bcrypt = "^4.0.1"
python-multipart = "^0.0.5"
PyJWT = {extras = ["crypto"], version = "^2.6.0"}
asgi-lifespan = "^2.0.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
dependency-injector = "^4.40.0"
aiosqlite = "^0.17.0"
fastapi-cache2 = "^0.2.0"
factory-boy = "^3.2.1"
mock = "^4.0.3"
redis = "^4.4.0"
pycryptodome = "^3.16.0"
pyjwkest = "^1.4.2"
dynaconf = "^3.1.11"
jinja2 = "^3.1.2"
pytest-postgresql = "^4.1.1"
psycopg = "^3.1.8"
testcontainers = "^3.7.1"
sqladmin = "^0.8.0"
fontawesomefree = "^6.3.0"
celery = "^5.2.7"
pytest-mock = "^3.10.0"
types-redis = "^4.5.1"
types-mock = "^5.0.0"
fastapi-utils = "^0.2.1"
prometheus-fastapi-instrumentator = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"

[tool.isort]
line_length = 80
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
known_first_party = "src"

[tool.black]
line-length = 80

[tool.mypy]
files = "src"
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_incremental = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
